src/snapshots/rbx_types_ops__floor_ceil_round_abs__cframe_ceil.snap
---
source: src/floor_ceil_round_abs.rs
expression: "Variant::from(CFrame::new(Vector3::new(5.2, 10.8, 15.2),\nMatrix3::new(Vector3::new(6.6, 12.7, 18.2), Vector3::new(6.6, 12.7, 18.2),\nVector3::new(6.6, 12.7, 18.2)))).ceil()"
---
CFrame:
  position:
    - 6
    - 11
    - 16
  orientation:
    - - 7
      - 13
      - 19
    - - 7
      - 13
      - 19
    - - 7
      - 13
      - 19
