src/snapshots/rbx_types_ops__floor_ceil_round_abs__color3_abs.snap
---
source: src/floor_ceil_round_abs.rs
expression: "Variant::from(Color3::new(5.2, 8.4, -3.7)).abs()"
---
Color3:
  - 5.2
  - 8.4
  - 3.7
