src/snapshots/rbx_types_ops__floor_ceil_round_abs__color3_ceil.snap
---
source: src/floor_ceil_round_abs.rs
expression: "Variant::from(Color3::new(5.2, 8.4, 3.7)).ceil()"
---
Color3:
  - 6
  - 9
  - 4
