src/snapshots/rbx_types_ops__floor_ceil_round_abs__color3uint8_ceil.snap
---
source: src/floor_ceil_round_abs.rs
expression: "Variant::from(Color3uint8::new(12, 16, 2)).ceil()"
---
Color3uint8:
  - 12
  - 16
  - 2
